# crate-version-mismatch-diagnostics-example

./: Cargo.toml  README.md
dep/: Cargo.toml
dep/src/: lib.rs
dependency/: Cargo.toml
dependency-with-version-mismatch-0.1/: Cargo.toml
dependency-with-version-mismatch-0.2/: Cargo.toml
dependency/src/: lib.rs
src/: main.rs
versioned-dependency-0.1/: Cargo.toml
versioned-dependency-0.2/: Cargo.toml
versioned-dependency-0.2/src/: lib.rs
