[package]
name = "dependency"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dependency-with-version-mismatch = { version = "0.1", path = "../dependency-with-version-mismatch-0.1" }
